tests/snapshots/mkdr__render__tests__renders_code_block.snap
---
source: src/render.rs
expression: lines
---
[
    Line::from(Span::from(" rust ").dark_gray().bold()),
    Line::from_iter([
        Span::from("  "),
        Span::from("fn").fg(Color::Rgb(180, 142, 173)).bg(Color::Rgb(30, 30, 30)),
        Span::from(" ").fg(Color::Rgb(192, 197, 206)).bg(Color::Rgb(30, 30, 30)),
        Span::from("main").fg(Color::Rgb(143, 161, 179)).bg(Color::Rgb(30, 30, 30)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)).bg(Color::Rgb(30, 30, 30)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)).bg(Color::Rgb(30, 30, 30)),
        Span::from(" ").fg(Color::Rgb(192, 197, 206)).bg(Color::Rgb(30, 30, 30)),
        Span::from("{").fg(Color::Rgb(192, 197, 206)).bg(Color::Rgb(30, 30, 30)),
        Span::from("}").fg(Color::Rgb(192, 197, 206)).bg(Color::Rgb(30, 30, 30)),
    ]),
]
