tests/snapshots/mkdr__render__tests__renders_complex_table.snap
---
source: src/render.rs
expression: lines
---
[
    Line::from_iter([
        Span::from("┌").fg(Color::Rgb(128, 128, 128)),
        Span::from("───────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┬").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┬").fg(Color::Rgb(128, 128, 128)),
        Span::from("────────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┐").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(128, 128, 128)),
        Span::from("Name").fg(Color::Rgb(212, 212, 212)).bold(),
        Span::from(" "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("Age").fg(Color::Rgb(212, 212, 212)).bold(),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("City").fg(Color::Rgb(212, 212, 212)).bold(),
        Span::from("  "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("├").fg(Color::Rgb(128, 128, 128)),
        Span::from("───────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┼").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┼").fg(Color::Rgb(128, 128, 128)),
        Span::from("────────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┤").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(128, 128, 128)),
        Span::from("Alice").fg(Color::Rgb(212, 212, 212)),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("30").fg(Color::Rgb(212, 212, 212)),
        Span::from(" "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("Madrid").fg(Color::Rgb(212, 212, 212)),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(128, 128, 128)),
        Span::from("Bob").fg(Color::Rgb(212, 212, 212)),
        Span::from("  "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("25").fg(Color::Rgb(212, 212, 212)),
        Span::from(" "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("París").fg(Color::Rgb(212, 212, 212)),
        Span::from(" "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(128, 128, 128)),
        Span::from("Carol").fg(Color::Rgb(212, 212, 212)),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("35").fg(Color::Rgb(212, 212, 212)),
        Span::from(" "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("Roma").fg(Color::Rgb(212, 212, 212)),
        Span::from("  "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("└").fg(Color::Rgb(128, 128, 128)),
        Span::from("───────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┴").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┴").fg(Color::Rgb(128, 128, 128)),
        Span::from("────────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┘").fg(Color::Rgb(128, 128, 128)),
    ]),
]
