tests/snapshots/mkdr__render__tests__renders_inline_code.snap
---
source: src/render.rs
expression: lines
---
[
    Line::from_iter([
        Span::from("Use ").fg(Color::Rgb(212, 212, 212)),
        Span::from("code").fg(Color::Rgb(206, 145, 120)).bg(Color::Rgb(45, 45, 45)),
        Span::from(" here").fg(Color::Rgb(212, 212, 212)),
    ]),
]
