tests/snapshots/mkdr__render__tests__renders_mixed_content_with_spacing.snap
---
source: src/render.rs
expression: lines
---
[
    Line::from(Span::from("Title").fg(Color::Rgb(244, 71, 71)).bold()),
    Line::default(),
    Line::from(Span::from("Hello world.").fg(Color::Rgb(212, 212, 212))),
    Line::default(),
    Line::from(Span::from("▐ ").fg(Color::Rgb(106, 153, 85))),
    Line::default(),
    Line::from_iter([
        Span::from("• ").fg(Color::Rgb(86, 156, 214)),
        Span::from("item").fg(Color::Rgb(212, 212, 212)),
    ]),
    Line::default(),
    Line::from(Span::from("  code").fg(Color::Rgb(212, 212, 212)).bg(Color::Rgb(30, 30, 30))),
]
