tests/snapshots/mkdr__render__tests__renders_nested_list.snap
---
source: src/render.rs
expression: lines
---
[
    Line::from_iter([
        Span::from("• ").fg(Color::Rgb(86, 156, 214)),
        Span::from("outer").fg(Color::Rgb(212, 212, 212)),
    ]),
    Line::from_iter([
        Span::from("  • ").fg(Color::Rgb(86, 156, 214)),
        Span::from("inner").fg(Color::Rgb(212, 212, 212)),
    ]),
    Line::from_iter([
        Span::from("• ").fg(Color::Rgb(86, 156, 214)),
        Span::from("outer2").fg(Color::Rgb(212, 212, 212)),
    ]),
]
