tests/snapshots/mkdr__render__tests__renders_table.snap
---
source: src/render.rs
expression: lines
---
[
    Line::from_iter([
        Span::from("┌").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┬").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┐").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(128, 128, 128)),
        Span::from("A").fg(Color::Rgb(212, 212, 212)).bold(),
        Span::from("  "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("B").fg(Color::Rgb(212, 212, 212)).bold(),
        Span::from("  "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("├").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┼").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┤").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(128, 128, 128)),
        Span::from("1").fg(Color::Rgb(212, 212, 212)),
        Span::from("  "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
        Span::from("2").fg(Color::Rgb(212, 212, 212)),
        Span::from("  "),
        Span::from("  │").fg(Color::Rgb(128, 128, 128)),
    ]),
    Line::from_iter([
        Span::from("└").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┴").fg(Color::Rgb(128, 128, 128)),
        Span::from("─────").fg(Color::Rgb(128, 128, 128)),
        Span::from("┘").fg(Color::Rgb(128, 128, 128)),
    ]),
]
