tests/snapshots/mkdr__render__tests__renders_task_list.snap
---
source: src/render.rs
expression: lines
---
[
    Line::from_iter([
        Span::from("• ").fg(Color::Rgb(86, 156, 214)),
        Span::from("☑").green().bold(),
        Span::from(" "),
        Span::from("done").fg(Color::Rgb(212, 212, 212)),
    ]),
    Line::from_iter([
        Span::from("• ").fg(Color::Rgb(86, 156, 214)),
        Span::from("☐").red().bold(),
        Span::from(" "),
        Span::from("todo").fg(Color::Rgb(212, 212, 212)),
    ]),
]
